--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,20 +1,21 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ai.navigation": "1.1.5",
-    "com.unity.ide.rider": "3.0.27",
+    "com.unity.ai.navigation": "2.0.4",
+    "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.multiplayer.tools": "1.0.0",
-    "com.unity.netcode.gameobjects": "1.7.1",
-    "com.unity.test-framework": "1.1.33",
-    "com.unity.textmeshpro": "3.0.8",
-    "com.unity.timeline": "1.7.6",
-    "com.unity.toolchain.linux-x86_64": "2.0.6",
-    "com.unity.toolchain.macos-x86_64-linux-x86_64": "2.0.6",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.multiplayer.tools": "2.2.1",
+    "com.unity.netcode.gameobjects": "1.10.0",
+    "com.unity.test-framework": "1.4.5",
+    "com.unity.timeline": "1.8.7",
+    "com.unity.toolchain.linux-x86_64": "2.0.9",
+    "com.unity.toolchain.macos-x86_64-linux-x86_64": "2.0.9",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
+    "com.unity.ugui": "2.0.0",
     "com.veriorpies.parrelsync": "https://github.com/VeriorPies/ParrelSync.git?path=/ParrelSync",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
